# psychologist_ai_bot

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: config.py  main.py
bot/database/: db.py  models.py
bot/handlers/: commands.py  text.py  voice.py
bot/prompts/: default_therapist.txt  therapist.py
bot/prompts/presets/: cbt.txt  coach.txt  gestalt.txt  jungian.txt
bot/services/: diary.py  export.py  mood.py  openrouter.py  punctuator.py  reminder.py  transcriber.py
scripts/: download_model.py
