[project]
name = "psychologist-ai-bot"
version = "0.1.0"
description = "Telegram bot — личный психолог-терапевт с голосовыми сообщениями"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.29.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.20.0",
    "faster-whisper>=1.1.0",
]

[project.scripts]
psychologist-bot = "bot.main:main"
